--- a/src/app/components/chat-bar/chat-bar.component.html
+++ b/src/app/components/chat-bar/chat-bar.component.html
@@ -1,21 +1,19 @@
-<!--<h1>Angular Emoji</h1>-->
-<!--<p>This is where the magic happens</p>-->
 <div class="box-chat__content__form">
-  <form class="d-flex align-items-center  width_full">
-    <button class="custom-button button-primary" (click)="isEmojiPickerVisible = !isEmojiPickerVisible;">
+  <form class="d-flex align-items-center gap-3" (submit)="sendChat()">
+    <button type="button" class="custom-button button-primary" (click)="toggleEmoji()">
       <i class="fa-solid fa-face-grin"></i>
     </button>
-    <button class="custom-button button-primary">
+    <label for="image" class="custom-button button-primary">
       <i class="fa-solid fa-plus"></i>
-    </button>
+      <input id="image" type="file" class="d-none">
+    </label>
     <div class="box-chat__content__form__input">
-      <input placeholder="Write your message..." type="text" name="textchat" [(ngModel)]="textChat">
+      <input placeholder="Write your message..." type="text" name="message" [(ngModel)]="message">
     </div>
     <button class="custom-button send-button" type="submit">
       <i class="fa-solid fa-paper-plane"></i>
     </button>
-
-    <emoji-mart class="emoji-mart" *ngIf="isEmojiPickerVisible" (emojiSelect)="addEmoji($event)"
-                title="Choose your emoji"></emoji-mart>
+    <emoji-mart class="emoji-mart" *ngIf="isEmojiPickerVisible" (emojiSelect)="addEmoji($event)"></emoji-mart>
   </form>
 </div>
+<div class="overlay-emoji" (click)="toggleEmoji()"></div>
