--- a/src/app/components/search-message/search-message.component.html
+++ b/src/app/components/search-message/search-message.component.html
@@ -2,7 +2,7 @@
   <i class="fa-solid fa-magnifying-glass"></i>
 </button>
 <div class="box-chat__sidebar__header__search" [ngClass]="isOpenedSearch ? 'show':'hidden'">
-  <button><i class="fa-solid fa-magnifying-glass"></i></button>
+  <button type="button"><i class="fa-solid fa-magnifying-glass"></i></button>
   <input type="text" placeholder="Search messages...">
-  <button (click)="toggleSearch()"><i class="fa-solid fa-xmark"></i></button>
+  <button type="button" (click)="toggleSearch()"><i class="fa-solid fa-xmark"></i></button>
 </div>
