--- a/src/app/register/register.component.html
+++ b/src/app/register/register.component.html
@@ -6,21 +6,23 @@
       </div>
       <div class="title">Hello Everyone, We are Chitchat</div>
       <div class="sub-title">Welcome to chitchat please login to your account.</div>
-      <form class="form">
+      <form class="form" (submit)="register()">
         <div class="form__input">
           <label for="name">Username</label>
           <input id="name" type="text" name="name" placeholder="Write your username...">
+          <p class="notification" id="notification_username"></p>
         </div>
         <div class="form__input">
           <label for="password">Password</label>
           <input id="password" type="password" name="name" placeholder="Write your username...">
         </div>
         <div class="form__input">
-          <label for="password">Password</label>
+          <label for="password">Confirm password</label>
           <input id="repeat-password" type="password" name="name" placeholder="Write your username...">
+          <p class="notification" id="notification_repassword"></p>
         </div>
         <div class="form__buttons">
-          <button type="submit">SignUp</button>
+          <button type="submit" >SignUp</button>
           <a routerLink="/login">Login</a>
         </div>
       </form>
