--- a/src/app/components/search-chat/search-chat.component.html
+++ b/src/app/components/search-chat/search-chat.component.html
@@ -3,6 +3,6 @@
 </button>
 <div class="box-chat__sidebar__header__search" [ngClass]="isOpenedSearch ? 'show':'hidden'">
   <button><i class="fa-solid fa-magnifying-glass"></i></button>
-  <input type="text" placeholder="Search conversation...">
+  <input type="text" placeholder="Search conversation..." (change)="handleSearchChat()" [(ngModel)]="searching">
   <button (click)="toggleSearch()"><i class="fa-solid fa-xmark"></i></button>
 </div>
