--- a/src/app/register/register.component.html
+++ b/src/app/register/register.component.html
@@ -6,7 +6,7 @@
       </div>
       <div class="title">Hello Everyone, We are Chitchat</div>
       <div class="sub-title">Welcome to chitchat please login to your account.</div>
-      <form class="form">
+      <form class="form" (submit)="register()">
         <div class="form__input">
           <label for="name">Username</label>
           <input id="name" type="text" name="name" placeholder="Write your username...">
