--- a/src/app/components/box-chat/box-chat.component.html
+++ b/src/app/components/box-chat/box-chat.component.html
@@ -1,29 +1,36 @@
-<div class="chat-conversation__header">
-  <div class="d-flex">
-    <div class="chat-conversation__avatar">
-      <img src="https://vue.pixelstrap.com/chitchat/_nuxt/img/1.5d73494.jpg" alt="avatar">
+<ng-container *ngIf="activeRoom">
+  <div class="chat-conversation__header">
+    <div class="d-flex">
+      <div class="chat-conversation__avatar">
+        <ng-container [ngSwitch]="activeRoom.type">
+          <img *ngSwitchCase="'people'" src="/assets/images/user.jpg" alt="avatar">
+          <img *ngSwitchCase="'room'" src="/assets/images/group.jpg" alt="avatar">
+        </ng-container>
+      </div>
+      <div class="chat-conversation__header__info">
+        <h5 class="chat-conversation__header__info__name">{{ activeRoom.name || 'Anonymous'}}</h5>
+        <p class="chat-conversation__header__info__status mt-2">{{ activeRoom.type || 'Anonymous'}}</p>
+      </div>
     </div>
-    <div class="chat-conversation__header__info">
-      <h5 class="chat-conversation__header__info__name">{{ activeRoom?.name || 'Anonymous'}}</h5>
-      <p class="chat-conversation__header__info__status mt-2">Active</p>
-    </div>
+    <app-search-message></app-search-message>
   </div>
-  <app-search-message></app-search-message>
-</div>
-<div #scrollMe class="chat-conversation__content"
+</ng-container>
+<div class="chat-conversation__content"
      [ngClass]="activeRoom && activeRoom.messages && activeRoom.messages.length ? 'show': 'hidden'">
   <ng-container *ngFor="let message of activeRoom?.messages; let i = index">
     <ng-container *ngIf="message.mes != null && message.mes">
       <div class="chat-conversation__message-container pb-4"
            [ngClass]="message.name === user?.name ? 'flex-row-reverse': ''">
         <div class="chat-conversation__avatar" [ngClass]="message.name === user?.name ? 'd-none': ''">
-          <img src="https://vue.pixelstrap.com/chitchat/_nuxt/img/1.5d73494.jpg" alt="avatar">
+          <img
+            src="https://images.vexels.com/media/users/3/137047/isolated/lists/5831a17a290077c646a48c4db78a81bb-user-profile-blue-icon.png"
+            alt="avatar">
         </div>
         <div class="d-flex flex-column" [ngClass]="message.name === user?.name ? 'align-items-end':''">
           <div class="d-flex align-items-center gap-4"
                [ngClass]="message.name === user?.name ? 'flex-row-reverse': ''">
             <p class="chat-conversation__message-container__name">{{message.name || 'Anonymous'}}</p>
-            <p class="chat-conversation__message-container__time">{{message.createAt | date:'shortTime'}}</p>
+            <p class="chat-conversation__message-container__time">{{message.createAt | date:'mediumTime'}}</p>
           </div>
           <div class="d-flex align-items-center gap-3" [ngClass]="message.name === user?.name ? 'flex-row-reverse':''">
             <div class="chat-conversation__message-container__message"
