--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,5 +1,5 @@
 <div class="d-flex h-100 gap-0">
-  <app-sidebar [user]="user" (logout)="handleLogout()" [toggle]="toggleStatus[toggleStatus.length - 1]"></app-sidebar>
+  <app-sidebar [user]="user" (logout)="handleLogout()" #sidebar></app-sidebar>
   <div class="box-chat">
     <div class="box-chat__sidebar position-relative">
       <div class="box-chat__sidebar__header">
@@ -7,7 +7,8 @@
           <h3>Recent</h3>
           <p>Chat from your friends 😘</p>
         </div>
-        <button class="custom-button button-light" (click)="toggleScreen()">
+        <button class="custom-button button-light"
+                (click)=" this.sidebar['showSidebar'] = !this.sidebar['showSidebar']">
           <i class="fa-solid fa-expand"></i>
         </button>
       </div>
@@ -16,22 +17,17 @@
           <h3>Chats</h3>
           <p>Start New Conversation</p>
         </div>
-        <app-search-chat></app-search-chat>
+        <app-search-chat (searchChat)="searchChat($event)"></app-search-chat>
       </div>
-      <div class="box-chat__group-button">
-        <button class="active">Direct</button>
-        <button>Group</button>
-      </div>
-      <app-button-add></app-button-add>
-      <div class="box-chat__users">
-        <app-group-chat [rooms]="rooms" [activeRoom]="activeRoom" (changeRoom)="changeRoom($event)"></app-group-chat>
-      </div>
+      <app-group-chat [rooms]="rooms" [activeRoom]="activeRoom" [searching]="searching"
+                      (changeRoom)="changeRoom($event)"
+                      class="d-flex flex-column overflow-hidden"></app-group-chat>
+      <app-new-contact [rooms]="rooms"></app-new-contact>
     </div>
-    <div class="box-chat__content">
+    <div class="box-chat__content position-relative">
       <app-box-chat class="chat-conversation" [activeRoom]="activeRoom" [user]="user"></app-box-chat>
-      <app-chat-bar></app-chat-bar>
+      <app-chat-bar (sendChat)="sendChat($event)"></app-chat-bar>
     </div>
   </div>
 </div>
-
 
