--- a/src/app/register/register.component.html
+++ b/src/app/register/register.component.html
@@ -1,6 +1,6 @@
 <div class="d-flex w-100 h-100">
   <div class="col-4 h-100">
-    <div class="wrapper">
+    <div class="wrapper py-4">
       <div class="logo">
         <img src="https://vue.pixelstrap.com/chitchat/_nuxt/img/landing-logo.d9ecd4c.png" alt="logo">
       </div>
@@ -26,18 +26,6 @@
           <a routerLink="/login">Login</a>
         </div>
       </form>
-      <div class="connect">
-        <div class="connect__line">
-          <p></p>
-          <p>Or connect with</p>
-          <p></p>
-        </div>
-        <div class="d-flex align-items-center justify-content-center gap-3">
-          <button><i class="fa-brands fa-google"></i></button>
-          <button><i class="fa-brands fa-twitter"></i></button>
-          <button><i class="fa-brands fa-facebook-f"></i></button>
-        </div>
-      </div>
     </div>
   </div>
   <div class="col-8 h-100">
