--- a/src/styles.css
+++ b/src/styles.css
@@ -14,81 +14,77 @@ body {
   height: 100vh;
   overflow: hidden;
 }
-/* You can add global styles to this file, and also import other style files */
-@import '~@ctrl/ngx-emoji-mart/picker.css';
-
-* {
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box;
-}
-
-body {
-  color: #495057;
-  font-family: 'Rubik', sans-serif;
-  width: 100vw;
-  height: 100vh;
-  overflow: hidden;
-}
 
 
-body:not(.dark-mode-preloading) {
-  transition: all 0.3s revert;
-}
+/*body.dark-mode {*/
+/*  background-color: #25262c;*/
+/*  color: #fff;*/
+/*}*/
 
-body.dark-mode {
-  background-color: #25262c;
-  color: #fff;
-}
+/*body.light-mode {*/
+/*  background-color: #fff;*/
+/*  color: #25262c;*/
+/*}*/
 
-body.light-mode {
-  background-color: #fff;
-  color: #25262c;
-}
-.dark-mode .chat-conversation__header{
-  background-color: #25262c!important;
-  border: unset!important;
-  box-shadow: 0 -55px 0 0 #2d3436!important;
-}
-.dark-mode .sidebar{
-  background-color: #25262c!important;
+/*body:not(.dark-mode-preloading) {*/
+/*  transition: all 0.3s revert;*/
+/*}*/
 
-}
-.dark-mode .box-chat__sidebar h3,p:not(app-box-chat .chat-conversation__message-container__message){
-  color: #fff!important;
-}
-.dark-mode .box-chat__content__form__input input{
-  background-color: #25262c!important;
+/*.dark-mode .chat-conversation__header {*/
+/*  background-color: #25262c !important;*/
+/*  border: unset !important;*/
+/*  box-shadow: 0 -55px 0 0 #2d3436 !important;*/
+/*}*/
 
-}
-.dark-mode .chat-conversation{
-  background-color: #2d3436!important;
+/*.dark-mode .sidebar {*/
+/*  background-color: #25262c !important;*/
 
-}
-.dark-mode  .box-chat__sidebar,.dark-mode .sidebar,.dark-mode .sidebar__logo {
-  border-color: #667b89 !important;
-}
-.dark-mode .chat-conversation__message-container{
-  /*background-color:blue!important;*/
+/*}*/
 
-}
-.dark-mode .box-chat__content__form emoji-mart{
-  background-color: black!important;
-  color: black!important;
-}
-.dark-mode .box-chat__content__form__input input,.dark-mode .chat-conversation__header__info__name{
-  color: #fff!important;
-}
-.dark-mode app-login div{
-  background-color: #fff!important;
-}
-.dark-mode app-register div{
-  background-color: #fff!important;
-}
-.dark-mode .box-chat__sidebar__header__search input{
-  background-color: #25262c!important;
-  color: #fff!important;
-  padding: 5px;
-}
+/*.dark-mode .box-chat__sidebar h3, p:not(app-box-chat .chat-conversation__message-container__message) {*/
+/*  color: #000 !important;*/
+/*}*/
+
+/*.dark-mode .box-chat__content__form__input input {*/
+/*  background-color: #25262c !important;*/
+
+/*}*/
+
+/*.dark-mode .chat-conversation {*/
+/*  background-color: #2d3436 !important;*/
+
+/*}*/
+
+/*.dark-mode .box-chat__sidebar, .dark-mode .sidebar, .dark-mode .sidebar__logo {*/
+/*  border-color: #667b89 !important;*/
+/*}*/
+
+/*.dark-mode .chat-conversation__message-container {*/
+/*  !*background-color:blue!important;*!*/
+
+/*}*/
+
+/*.dark-mode .box-chat__content__form emoji-mart {*/
+/*  background-color: black !important;*/
+/*  color: black !important;*/
+/*}*/
+
+/*.dark-mode .box-chat__content__form__input input, .dark-mode .chat-conversation__header__info__name {*/
+/*  color: #fff !important;*/
+/*}*/
+
+/*.dark-mode app-login div {*/
+/*  background-color: #fff !important;*/
+/*}*/
+
+/*.dark-mode app-register div {*/
+/*  background-color: #fff !important;*/
+/*}*/
+
+/*.dark-mode .box-chat__sidebar__header__search input {*/
+/*  background-color: #25262c !important;*/
+/*  color: #fff !important;*/
+/*  padding: 5px;*/
+/*}*/
 
 
