--- a/src/app/components/box-chat/box-chat.component.html
+++ b/src/app/components/box-chat/box-chat.component.html
@@ -22,9 +22,7 @@
       <div class="d-flex gap-3 pb-4 align-items-end"
            [ngClass]="message.name === user?.name ? 'flex-row-reverse': ''">
         <div class="chat-conversation__avatar">
-          <img
-            src="https://png.pngtree.com/png-vector/20190805/ourlarge/pngtree-account-avatar-user-abstract-circle-background-flat-color-icon-png-image_1650938.jpg"
-            alt="avatar">
+          <img src="/assets/images/user.jpg" alt="avatar">
         </div>
         <div class="d-flex flex-column gap-0" [ngClass]="message.name === user?.name ? 'align-items-end':''">
           <div class="chat-conversation__message-container"
@@ -37,7 +35,7 @@
               <p>Forward</p>
             </button>
           </div>
-          <div class="d-flex align-items-center gap-3 mt-2 mb-1"
+          <div class="d-flex align-items-center gap-3"
                [ngClass]="message.name === user?.name ? 'flex-row-reverse': ''">
             <p class="chat-conversation__message-container__name">{{message.name || 'Anonymous'}}</p>
             <p class="chat-conversation__message-container__time">{{message.createAt | date:'shortTime'}}</p>
