--- a/src/app/register/register.component.html
+++ b/src/app/register/register.component.html
@@ -6,23 +6,26 @@
       </div>
       <div class="title">Hello Everyone, We are Chitchat</div>
       <div class="sub-title">Welcome to chitchat please login to your account.</div>
-      <form class="form" (submit)="register()">
+      <form class="form" [formGroup]="registerForm" (ngSubmit)="register()">
         <div class="form__input">
           <label for="name">Username</label>
-          <input id="name" type="text" name="name" placeholder="Write your username...">
+          <input id="name" type="text" formControlName="username" name="username" placeholder="Write your username..."
+                 required>
           <p class="notification" id="notification_username"></p>
         </div>
         <div class="form__input">
           <label for="password">Password</label>
-          <input id="password" type="password" name="name" placeholder="Write your username...">
+          <input id="password" type="password" formControlName="password" name="password"
+                 placeholder="Write your password..." required>
         </div>
         <div class="form__input">
           <label for="password">Confirm password</label>
-          <input id="repeat-password" type="password" name="name" placeholder="Write your username...">
+          <input id="repeat-password" type="password" formControlName="repeatPassword" name="repeatPassword"
+                 placeholder="Write your password again..." required>
           <p class="notification" id="notification_repassword"></p>
         </div>
         <div class="form__buttons">
-          <button type="submit" >SignUp</button>
+          <button type="submit">SignUp</button>
           <a routerLink="/login">Login</a>
         </div>
       </form>
