--- a/src/app/home/home.component.css
+++ b/src/app/home/home.component.css
@@ -241,13 +241,52 @@
 }
 
 .box-chat__content__form {
-  height: 95px;
   padding: 25px 45px;
 }
 
 .box-chat__content__form__input {
   flex: 1;
 }
+/*file images*/
+.box-chat__content__form__box-images {
+  display: flex;
+  flex-wrap: wrap;
+  min-height: 40px;
+  width: 100%;
+  background-color: #eff1f2;
+  border-radius: 50px;
+  padding: 10px 24px;
+  margin-bottom: 10px;
+}
+.box-chat__content__form__box-images__item {
+  position: relative;
+  width: 60px;
+  margin-right: 10px;
+}
+.box-chat__content__form__box-images__item-remove {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  position: absolute;
+  width: 18px;
+  height: 18px;
+  top: -7px;
+  right: -7px;
+  color: #ff4e2b;
+  border-radius: 50%;
+  border: 1px solid #ff4e2b;
+  background-color: #eff1f2;
+}
+.box-chat__content__form__box-images__item-remove i {
+  font-size: 13px;
+}
+.box-chat__content__form__box-images__item img {
+  width: 100%;
+  height: auto;
+  border-radius: 10px;
+}
+/*end images*/
+
 
 .box-chat__content__form__input input {
   border: none !important;
