update check value register null and dark mode

--- a/src/app/register/register.component.html
+++ b/src/app/register/register.component.html
@@ -15,6 +15,8 @@
         <div class="form__input">
           <label for="password">Password</label>
           <input id="password" type="password" name="name" placeholder="Write your username...">
+          <p class="notification" id="notification_password"></p>
+
         </div>
         <div class="form__input">
           <label for="password">Confirm password</label>
